# app

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  PROMPT-GOAL.md  README.md  compose.prod.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  mvp.md
.codex/: config.toml
.grok/: config.toml
backend/: .env.example  .gitignore  README.md  composer.json  phpunit.xml
docker/: README.md
docs/: PROCESSOS.md  (+4 more)
services/mei/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/mei/scripts/: entrypoint.sh  smoke_live_identify.py
services/mei/src/mei/: api.py  artifacts.py  browser.py  celery_app.py  config.py  dispatcher.py  executor.py  models.py  security.py  store.py  tasks.py
services/mei/src/mei/operations/: __init__.py  artifact_validation.py  base.py  captcha.py  dasn.py  handlers.py  pgmei.py  registry.py  schemas.py  semantic_html.py
services/mei/src/mei_automation/: __init__.py  api.py  celery_app.py  config.py  dispatcher.py  executor.py  models.py  security.py  store.py  tasks.py
services/mei/tests/: conftest.py  test_api.py  test_artifacts.py  test_executor.py  test_models.py  test_operation_registry.py  test_portal_artifacts.py  test_portal_executor.py  test_portal_parsers.py
services/mei/tests/fixtures/dasnsimei/: historico.html  identificacao.html  identification-outcomes.html  recibo.html
services/mei/tests/fixtures/pgmei/: codigo-barras.html  competencias.html  divida-ativa.html  identificacao.html  identification-outcomes.html  live-flow.html
(+5108 files in other folders)
