[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mei-automation"
version = "0.1.0"
description = "Executor interno de automacao dos portais oficiais do MEI"
requires-python = ">=3.12,<3.13"
dependencies = [
  "celery[redis]>=5.6,<5.7",
  "fastapi>=0.116,<1",
  "playwright>=1.55,<2",
  "pydantic-settings>=2.10,<3",
  "redis>=6.2,<7",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mei_automation"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mei_automation"]

